kubernetes/adminer-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  labels:
    app: holefeeder
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: holefeeder
    tier: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  labels:
    app: holefeeder
spec:
  selector:
    matchLabels:
      app: holefeeder
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: holefeeder
        tier: frontend
    spec:
      containers:
      - image: adminer:4.8.1
        name: adminer
        ports:
        - containerPort: 8080
          name: adminer
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
