kubernetes/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: holefeeder
spec:
  ports:
    - name: mysql-port
      protocol: TCP
      port: 3306
      targetPort: 3306
      nodePort: 30306
  selector:
    app: holefeeder
    tier: mysql
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: holefeeder
spec:
  selector:
    matchLabels:
      app: holefeeder
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: holefeeder
        tier: mysql
    spec:
      containers:
      - image: mysql:8.0.26
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        resources:
          requests:
            memory: 128Mi
            cpu: 200m
          limits:
            memory: 500Mi
            cpu: 500m
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        # - name: init-scripts
        #   mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      # - name: init-scripts
      #   configMap:
      #     name: mysql-scripts-config
